2de row is klaar.
Second row done.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
     <div class="S_C1">
         <h2>Services</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam illo eum, adipisci corrupti cupiditate earum et quaerat consectetur dolor neque!</p>
+        <div class="container"><a href="#" class="button" id="linkseButton">vind een job</a>
+        <a href="#" class="button">alles over Lanworks</a></div>
     </div>
 
     <div class="S_C2">
-
+        <img src="../images/lanworks_afb_2.png" alt="BOKTOR">
     </div>
 
 
