--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Lanworks.be</title>
 </head>
 <body>
+<!-- NAVBAR -->
 <ul class="navbar">
     <img src="../images/logo1Lanworks.png" alt="Logo">
     <li><a href="/index.html">Home</a></li>
     <li><a href="/contactus.html">Contact Us</a></li>
 </ul>
-
+<!--TITEL 1-->
 <div class="titel-container">
 <h1>Lanworks IT Solutions.</h1>
 </div>
@@ -43,8 +44,23 @@
     <div class="S_C2">
         <img src="../images/lanworks_afb_2.png" alt="BOKTOR">
     </div>
+</div>
+    <div class="ROW3">
+        <div class="ROW3_C1">
+            <img src="../images/lanworks_afb_3.png" alt="Foto">
+        </div>
 
+        <div class="ROW3_C2">
+            <h2>Lanworks is er voor u.</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tenetur illum fugiat quia eius dignissimos impedit dolore ea aperiam facere?</p>
+        </div>
 
+    </div>
+
+<div class="footer">
+    <img src="../images/logo1Lanworks.png" alt="">
+    <p>Lanworks IT Consultancy & Services</p>
+    <p>info@lanworks.be</p>
 </div>
 </body>
 </html>
