--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
 <!-- NAVBAR -->
-<ul class="navbar">
+<ul class="navbar" id="navbar">
+    <div class="leftAligned" id="leftAligned">
     <img src="../images/logo1Lanworks.png" alt="Logo">
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/contactus.html">Contact Us</a></li>
+    <li id="linksLink1"><a href="/index.html" id="linksLinkA">Home</a></li>
+    <li id="linksLink2"><a href="/contactus.html" id="linksLinkB">Contact Us</a></li>
+    </div>
+
+    <div class="rightAligned">
+    <li><img src="../images/bars.png" id="bars" alt=""></li>
+    </div>
 </ul>
 <!--TITEL 1-->
 <div class="titel-container">
@@ -29,7 +35,7 @@
         <h2>IT Consultancy</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt mollitia inventore explicabo delectus adipisci minus.</p>
 
-        <a href="#">Ontdek</a>
+        <a href="#" id="ontdek">Ontdek</a>
     </div>
 </div>
 
@@ -62,5 +68,7 @@
     <p>Lanworks IT Consultancy & Services</p>
     <p>info@lanworks.be</p>
 </div>
+
+<script src="./responsiveNavbar.js"></script>
 </body>
 </html>
