logo, text and further responsive details.

--- a/index.html
+++ b/index.html
@@ -28,37 +28,46 @@
 <!-- IT CONSULTANCY ROW-->
 <div class="IT-Consultancy-row">
     <div id="IC_C1">
-        <img src="../images/lanworks_afb_1.png" alt="">
+        <img src="../images/lanworks_icon_1.png" alt="" class="responsiveImg">
     </div>
 
     <div id="IC_C2">
-        <h2>IT Consultancy</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt mollitia inventore explicabo delectus adipisci minus.</p>
+        <h2>IT Consultancy.</h2>
+        <p>We have over 25 years of expierence in modern IT operations. Increase productivity and efficiency by
+            choosing for us.
+        </p>
 
-        <a href="#" id="ontdek">Ontdek</a>
+        <a href="/contactus.html" id="Ontdek">Contact Us</a>
     </div>
 </div>
 
 <div class="Services-row">
     <div class="S_C1">
-        <h2>Services</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam illo eum, adipisci corrupti cupiditate earum et quaerat consectetur dolor neque!</p>
-        <div class="container"><a href="#" class="button" id="linkseButton">vind een job</a>
-        <a href="#" class="button">alles over Lanworks</a></div>
+        <h2>Cloud Computing</h2>
+        <p>We deliver several cloudservices. We work closely with Microsoft Azure to ensure we only deliver
+            the best for our clients.
+            We also give our clients advice and guidance. Any questions? Feel free to contact us.
+        </p>
+        <div class="container"><a href="#" class="button" id="linkseButton">Contact Us</a>
+        <a href="#" class="button">Our Partners</a></div>
     </div>
 
     <div class="S_C2">
-        <img src="../images/lanworks_afb_2.png" alt="BOKTOR">
+        <img src="../images/lanworks_icon_2.png" alt="BOKTOR" class="responsiveImg">
     </div>
 </div>
     <div class="ROW3">
         <div class="ROW3_C1">
-            <img src="../images/lanworks_afb_3.png" alt="Foto">
+            <img src="../images/lanworks_icon_3..png" alt="Foto" class="responsiveImg">
         </div>
 
         <div class="ROW3_C2">
-            <h2>Lanworks is er voor u.</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur tenetur illum fugiat quia eius dignissimos impedit dolore ea aperiam facere?</p>
+            <h2>We're here to help. </h2>
+            <p>
+                We monitor your IT environment to make sure you're always up to date. If any problems do occur,
+                we'll be the first to solve them. Due to our variety of employees we always have the perfect IT-professional
+                ready to help.
+            </p>
         </div>
 
     </div>
