image verandert na hover op één van de navlinks

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- IT CONSULTANCY ROW-->
 <div class="IT-Consultancy-row">
     <div id="IC_C1">
-        <img src="../images/lanworks_icon_1.png" alt="" class="responsiveImg">
+        <img src="../images/lanworks_icon_1.png" alt="" class="responsiveImg" id="logo1">
     </div>
 
     <div id="IC_C2">
@@ -79,5 +79,6 @@
 </div>
 
 <script src="./responsiveNavbar.js"></script>
+<script src="./logo1.js"></script>
 </body>
 </html>
