--- a/contactus.html
+++ b/contactus.html
@@ -36,7 +36,7 @@
 				      		<div id="form-message-success" class="mb-4">
 				            Your message was sent, thank you!
 				      		</div>
-									<form method="POST" action="mailto:info@lanworks.be" id="contactForm" name="contactForm">
+									<form method="POST" action="https://formsubmit.co/29cb60acbb60729d80bf1763def00dc9" id="contactForm" name="contactForm">
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
