proberen overflow op mobile te fixen
onmogelijk

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="/index.css">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanworks.be</title>
 </head>
+
 <body>
-<!-- NAVBAR -->
-<ul class="navbar" id="navbar">
+    <!-- NAVBAR -->
+    <ul class="navbar" id="navbar">
     <div class="leftAligned" id="leftAligned">
     <img src="../images/logo1Lanworks.png" alt="Logo">
     <li id="linksLink1"><a href="/index.html" id="linksLinkA">Home</a></li>
@@ -19,43 +21,44 @@
     <div class="rightAligned">
     <li><img src="../images/bars.png" id="bars" alt=""></li>
     </div>
-</ul>
-<!--TITEL 1-->
-<div class="titel-container">
-<h1>Lanworks IT Solutions.</h1>
-</div>
-
-<!-- IT CONSULTANCY ROW-->
-<div class="IT-Consultancy-row">
-    <div id="IC_C1">
-        <img src="../images/lanworks_icon_1.png" alt="" class="responsiveImg" id="logo1">
+    </ul>
+    <!--TITEL 1-->
+    <div class="titel-container">
+        <h1>Lanworks IT Solutions.</h1>
     </div>
 
-    <div id="IC_C2">
-        <h2>IT Consultancy.</h2>
-        <p>We have over 25 years of expierence in modern IT operations. Increase productivity and efficiency by
-            choosing for us.
-        </p>
+    <!-- IT CONSULTANCY ROW-->
+    <div class="IT-Consultancy-row">
+        <div id="IC_C1">
+            <img src="../images/lanworks_icon_1.png" alt="" class="responsiveImg" id="logo1">
+        </div>
 
-        <a href="/contactus.html" id="Ontdek">Contact Us</a>
-    </div>
-</div>
+        <div id="IC_C2">
+            <h2>IT Consultancy.</h2>
+            <p>We have over 25 years of expierence in modern IT operations. Increase productivity and efficiency by
+                choosing for us.
+            </p>
 
-<div class="Services-row">
-    <div class="S_C1">
-        <h2>Cloud Computing</h2>
-        <p>We deliver several cloudservices. We work closely with Microsoft Azure to ensure we only deliver
-            the best for our clients.
-            We also give our clients advice and guidance. Any questions? Feel free to contact us.
-        </p>
-        <div class="container"><a href="#" class="button" id="linkseButton">Contact Us</a>
-        <a href="#" class="button">Our Partners</a></div>
+            <a href="/contactus.html" id="Ontdek">Contact Us</a>
+        </div>
     </div>
 
-    <div class="S_C2">
-        <img src="../images/lanworks_icon_2.png" alt="BOKTOR" class="responsiveImg">
+    <div class="Services-row">
+        <div class="S_C1">
+            <h2>Cloud Computing</h2>
+            <p>We deliver several cloudservices. We work closely with Microsoft Azure to ensure we only deliver
+                the best for our clients.
+                We also give our clients advice and guidance. Any questions? Feel free to contact us.
+            </p>
+            <div class="container"><a href="#" class="button" id="linkseButton">Contact Us</a>
+                <a href="#" class="button">Our Partners</a>
+            </div>
+        </div>
+
+        <div class="S_C2">
+            <img src="../images/lanworks_icon_2.png" alt="BOKTOR" class="responsiveImg">
+        </div>
     </div>
-</div>
     <div class="ROW3">
         <div class="ROW3_C1">
             <img src="../images/lanworks_icon_3..png" alt="Foto" class="responsiveImg">
@@ -65,20 +68,22 @@
             <h2>We're here to help. </h2>
             <p>
                 We monitor your IT environment to make sure you're always up to date. If any problems do occur,
-                we'll be the first to solve them. Due to our variety of employees we always have the perfect IT-professional
+                we'll be the first to solve them. Due to our variety of employees we always have the perfect
+                IT-professional
                 ready to help.
             </p>
         </div>
 
     </div>
 
-<div class="footer">
+    <div class="footer">
     <img src="../images/logo1Lanworks.png" alt="">
     <p>Lanworks IT Consultancy & Services</p>
     <p>info@lanworks.be</p>
-</div>
+    </div>
 
-<script src="./responsiveNavbar.js"></script>
-<script src="./logo1.js"></script>
+    <script src="./responsiveNavbar.js"></script>
+    <script src="./logo1.js"></script>
 </body>
+
 </html>
