dynamische array met partners, navbar gefixt, etc...

--- a/contactus.html
+++ b/contactus.html
@@ -17,6 +17,7 @@
 		<img src="../images/logo1Lanworks.png" alt="Logo">
 		<li id="linksLink1"><a href="/index.html" id="linksLinkA">Home</a></li>
 		<li id="linksLink2"><a href="/contactus.html" id="linksLinkB">Contact Us</a></li>
+		<li id="linksLink3"><a href="/partners.html" id="linksLinkC">Partners</a></li>
 		</div>
 	
 		<div class="rightAligned">
