--- a/partners.html
+++ b/partners.html
@@ -32,7 +32,7 @@
     <div class="grandparent" id="grandparent">
     <div class="parent">
         <div class="partnerArtikel">
-            <div class="imageWrapper"><img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/microsoft_azure_logo_icon_168977.png" alt=""></div>
+            <div class="imageWrapper"><a href="https://www.microsoft.com"><img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/microsoft_azure_logo_icon_168977.png" alt=""></a></div>
         </div>
 
     </div>
