--- a/partners.html
+++ b/partners.html
@@ -32,7 +32,7 @@
     <div class="grandparent" id="grandparent">
     <div class="parent">
         <div class="partnerArtikel">
-            <div class="imageWrapper"><a href="https://www.microsoft.com"><img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/microsoft_azure_logo_icon_168977.png" alt=""></a></div>
+            <div class="imageWrapper"><a href="https://www.playstation.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Playstation_logo_colour.svg/1009px-Playstation_logo_colour.svg.png" alt=""></a></div>
         </div>
 
     </div>
