--- a/partners.html
+++ b/partners.html
@@ -32,7 +32,7 @@
     <div class="grandparent" id="grandparent">
     <div class="parent">
         <div class="partnerArtikel">
-            <div class="imageWrapper"><a href="https://www.playstation.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Playstation_logo_colour.svg/1009px-Playstation_logo_colour.svg.png" alt=""></a></div>
+            <div class="imageWrapper"><a href="https://www.playstation.com"><img src="https://www.accg.be/sites/default/files/styles/news_large/public/news/2017-06/accg-news-20170609-het-abvv-neemt-afscheid-van-marc-goblet-robert-vertenueil-wordt-algemeen-secretaris_0.jpg?itok=Hoyb2Bc4" alt=""></a></div>
         </div>
 
     </div>
